--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'Example'
+include ':react-native-sample-module'
+project(':react-native-sample-module').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sample-module/android/')
 
 include ':app'
