--- a/Example/package.json
+++ b/Example/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"react": "15.4.2",
-		"react-native": "0.42.0"
+		"react-native": "0.42.0",
+		"react-native-sample-module": "../"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
