--- a/Example/package.json
+++ b/Example/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.42.0",
-    "react-native-sample-module": "file:///Users/eegoma/workspace/react-native-sample-module"
+    "react-native-sample-module": "file:../"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
